[gd_scene load_steps=21 format=2]

[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_attack_0.png" type="Texture" id=1]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_3.png" type="Texture" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_1.png" type="Texture" id=3]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_2.png" type="Texture" id=4]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_attack_1.png" type="Texture" id=5]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_attack_2.png" type="Texture" id=6]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_attack_4.png" type="Texture" id=7]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_0.png" type="Texture" id=8]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_attack_3.png" type="Texture" id=9]
[ext_resource path="res://Blightpack.gd" type="Script" id=10]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_death_0.png" type="Texture" id=11]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_death_2.png" type="Texture" id=12]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_death_1.png" type="Texture" id=13]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_death_3.png" type="Texture" id=14]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_death_5.png" type="Texture" id=15]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_death_4.png" type="Texture" id=16]
[ext_resource path="res://Placeholder Textures for Shards of the Past/blightpack/blightpack_death_6.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "attack_end",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": true,
"name": "attack_start",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ) ],
"loop": true,
"name": "attack_mid",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 11.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 21 )

[node name="Blightpack" type="KinematicBody2D"]
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "attack_start"
frame = 2
playing = true

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 19 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
wait_time = 7.625

[node name="Timer3" type="Timer" parent="."]
wait_time = 5.0

[node name="Timer4" type="Timer" parent="."]

[node name="Timer5" type="Timer" parent="."]
wait_time = 0.1
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
